# NeuroSense-Backend

./: README.md  pyproject.toml  requirements.txt  test_signup.py
app/: config.py
app/models/: content.py  parent.py  student.py
app/routes/: predict.py  profile.py  student.py  teacher.py
app/schemas/: content_schema.py  parent_schema.py  result_schema.py  student_schema.py
app/services/: auth_service.py  teacher_service.py  token_service.py
app/utils/: feature_extraction.py  file_storage.py  responses.py
backend/FaceModel - Copy/backend_face/: .gitignore  app.py  feature_utils.py  model_utils.py  requirements.txt  rf_basic.joblib
backend/FaceModel - Copy/frontend_face/face-trigger-app/: index.html  package-lock.json  package.json
backend/NeuroSense-Backend/app/: __init__.py  db_init.py
backend/NeuroSense-Backend/app/models/: result.py  teacher.py
backend/NeuroSense-Backend/app/routes/: analysis_result.py  auth.py  parent.py
backend/NeuroSense-Backend/app/schemas/: auth_schema.py  (+1 more)
backend/NeuroSense-Backend/models/: env_label_encoder.pkl
backend/NeuroSense-Backend/temp/: 0950f6bb-3224-4a39-8f87-bfe397127262_predictions.csv  89eba18a-c1fb-41f1-b9da-98d496812084_predictions.csv
backend/backend_attention1/: .gitignore  requirements.txt  server.py
frontend/NeuroSense/: pubspec.yaml
frontend/NeuroSense/android/: build.gradle.kts
frontend/NeuroSense/lib/: router.dart
temp/: 1ca2ecb5-69fb-4e5d-8a99-1797ef90a51a_predictions.csv  745670c9-ca6c-4dd0-984b-8ec7ce3d71bd_predictions.csv  812af3e9-4127-4965-bcc6-3514ebeb405f_predictions.csv
(+14 files in other folders)
